--- a/body/sec1.tex
+++ b/body/sec1.tex
@@ -3,6 +3,7 @@ The Anderson model is given by a class of discrete analogs of Schr$\ddot{o}$ding
 \begin{equation}
   (H_{\omega}\Psi)(n)=\Psi(n+1)+\Psi(n-1)+V_{\omega}(n)\Psi(n),
 \end{equation}
-where $\omega=\{\omega_n\}_{n\in\mathbb{Z}}\in\Omega=S^{\mathbb{Z}}$, $S=supp\{\mu\}\subset \mathbb{R}$ is assumed to be compact and contains at least two points, $\mu$ is a borel probability on $\mathbb{R}$. $i.e.$ for each $n\in\mathbb{Z}$, $V_{\omega} (n)$ is $i.i.d.$ random variables depending on $\omega_n$ in $(S,\mu)$, but we will consider $V_\omega$ in the product probability space $ (S^{\mathbb{Z}},\mu^{\mathbb{Z}})$ as a whole instead.
+where $\omega=\{\omega_n\}_{n\in\mathbb{Z}}\in\Omega=S^{\mathbb{Z}}$, $S\subset\mathbb{R}$ is the topological support of $\mu$, so compact and contains at least two points, $\mu$ is a Borel probability on $\mathbb{R}$. $i.e.$ for each $n\in\mathbb{Z}$, $V_{\omega} (n)$ is $i.i.d.$ random variables depending on $\omega_n$ in $(S,\mu) $, but we will consider $V_\omega$ in the product probability space $ (S^{\mathbb{Z}},\mu^{\mathbb{Z}})$ as a whole instead. Denote $\mu^{\mathbb{Z}}$ as $\mathbb{P}$,and $\mathbb{P}_{\omega_a,\cdots,\omega_b}$ be the projection of $\mathbb{P}$ to $S^{[a,b]^c\cap \mathbb{Z}}$.  Also denote Lebesgue measure as $m$.
 
-We say that $H_\omega$ exhibits the pectral localization property in an interval $I$ if for $a.e.\omega$, $H_\omega$ has only pure point spectrum in $I$ and its eigenfunction $\Psi(n)$ decays exponentially in $n$. We are gonna give a new proof for Anderson model based on the large deviation estimates and subharmonicity of Lvapunov exponents.
+% We know that $\sigma(H_\omega)=\sigma(H)=[-2,2]+S$ for $a.e. \omega$.
+We say that $H_\omega$ exhibits the spectral localization property in $I$ if for $a.e.\omega$, $H_\omega$ has only pure point spectrum in $I$ and its eigenfunction $\Psi(n)$ decays exponentially in $n$. We are going to give a new proof for Anderson model based on the large deviation estimates and subharmonicity of Lvapunov exponents.
