--- a/body/sec3.tex
+++ b/body/sec3.tex
@@ -1,18 +1,23 @@
-\section{main technique}
+for every \section{main technique}
+
+Denote
+\begin{equation}\label{B+}
+    B_{[a,b],\epsilon}^{+} =\left\{(E,\omega): |P_{[a,b],E,\omega}|\geq e^{(\gamma(E)+\epsilon)(b-a+1)}\right\}
+\end{equation}
+\begin{equation}\label{B-}
+    B_{[a,b],\epsilon}^{-} =\left\{(E,\omega): |P_{[a,b],E,\omega}|\leq e^{(\gamma(E)-\epsilon)(b-a+1)}\right\}\
+\end{equation}
+and denote $B_{[a,b],\epsilon,E}^{\pm}=\{\omega:(E,\omega)\in B_{[a,b],\epsilon}^{\pm}\}$, $B_{[a,b],\epsilon,\omega}^{\pm}=\{E:(E,\omega)\in B_{[a,b],\epsilon}^{\pm}\}$,
+$B_{[a,b],*}=B_{[a,b],*}^+\cup B_{[a,b],*}^-$.
+
+Let $E_{j,(\omega_a,\cdots,\omega_b)}$ be the eigenvalue of $H_{[a,b],\omega}$ with $\omega|_{[a,b]}=(\omega_a,\cdots,\omega_b)$.
+
 % The main technique is to find the proper set $\Omega_0$. Roughly speaking, the idea is: a point $x$ is $(C,k,E,\omega)$-singular means the corresponding pair $(E,\omega)$ is in some "bad" "large deviation set" for operators restricted near $x$, say, $H_{[x-k,x+k]}$. We can then pick proper set $\Omega_1$ such that these bad sets have small measures. Then pick $\Omega_2$ such that $E$ is not only in these bad sets, but also stay very close to eigenvalues of $H_{[x-k,x+k]}$ which are also in these bad sets. In this case, if we pick $\tilde{\omega}\in\Omega_1\cap\Omega_2$ and if $0$ and $2n+1$ are both $(C,n,\tilde{E},\tilde{\omega})$-singular, then $\tilde{E}$ will  be close to both eigenvalues $E_{i,n}$ of $H_{[-n,n]}$ near $0$ and eigenvalues $E_{j,n}$ of $H_{[n+1,3n+1]}$ near $2n+1$. So now $\tilde{E}$ is in bad sets for both intervals and are closed to both e.v., where each e.v. only belongs to bad sets for their own intervals. Which leads to a contradiction because the bad sets are so small that we can pick $\Omega_3$ by Borel Cantelli, such that eventually all the eigenvalues of $[n+1,3n+1]$ can't stay in bad set for $[-n,n]$,
 
 % The main idea is that a point $x$ is $(C,k,E,\omega)$-singular means somehow the pair $(E,\omega)$ is in some "bad" "large deviation set" for operators restricted near $x$, say, $H_{[x-k,x+k]}$.(see lemma1) However we can get from large deviation theorem that these sets are small, so both $E$ and eigenvalues of $H_{[x-k,x+k]}$, which also lies in these bad sets, will eventually get closed to each other due to some nice properties of these sets.
 
-We introduce the large deviation theorem here without proof.
-\cite{tsay1999some}
-\begin{lemma}[large deviation estimates]
-  For any $\epsilon>0$, there exists $\eta=\eta(\epsilon)>0$ such that, $\exists N_0=N_0(\epsilon)$, $ \forall b-a>N_0$
-  \[
-  \mu \left\{ \omega:\left\vert \frac{1}{b-a+1} ln\Vert P_{[a,b],E,\omega}\Vert-\gamma(E) \right\vert\geq\epsilon
-   \right\} \leq e^{-\eta (b-a+1)}
-  \]
-\end{lemma}
-\begin{remark}
+
+% \begin{remark}
 %   If we denote
 % \[
 % \begin{split}
@@ -22,40 +27,40 @@ We introduce the large deviation theorem here without proof.
 % \]
 %   we find that
 %   \[
-%     B_{[a,b],\epsilon}\subseteq\left\{(E,\omega):\left\vert\frac{1}{b-a+1} ln\Vert P_{[a,b],E,\omega}\Vert-\gamma(E)\right\vert \geq\epsilon \right\}
+%     B_{[a,b],\epsilon}\subseteq\left\{(E,\omega):\left\vert\frac{1}{b-a+1} \log\Vert P_{[a,b],E,\omega}\Vert-\gamma(E)\right\vert \geq\epsilon \right\}
 %   \]
 %   This is the "bad" set. And Large deviation theorem gives us the estimates that for all $E,a,b$
 % \begin{equation}\label{ldt}
 %   P(\{\omega:(E,\omega)\in B_{[a,b],\epsilon}\})\leq e^{-\eta(b-a+1)}
 % \end{equation}
 % Moreover, we denote
-Denote
-\begin{equation}\label{B+}
-    B_{[a,b],\epsilon}^{+} =\left\{(E,\omega): |P_{[a,b],E,\omega}|\geq e^{(\gamma(E)+\epsilon)(b-a+1)}\right\}
-\end{equation}
-\begin{equation}\label{B-}
-    B_{[a,b],\epsilon}^{-} =\left\{(E,\omega): |P_{[a,b],E,\omega}|\leq e^{(\gamma(E)-\epsilon)(b-a+1)}\right\}\
-\end{equation}
-and denote $B_{[a,b],\epsilon,E}^{\pm}=\{\omega:(E,\omega)\in B_{[a,b],\epsilon}\}^{\pm}$.
-And large deviation theorem gives us the estimates that for all $E, a, b,\epsilon$
+% Denote
+% \begin{equation}\label{B+}
+%     B_{[a,b],\epsilon}^{+} =\left\{(E,\omega): |P_{[a,b],E,\omega}|\geq e^{(\gamma(E)+\epsilon)(b-a+1)}\right\}
+% \end{equation}
+% \begin{equation}\label{B-}
+%     B_{[a,b],\epsilon}^{-} =\left\{(E,\omega): |P_{[a,b],E,\omega}|\leq e^{(\gamma(E)-\epsilon)(b-a+1)}\right\}\
+% \end{equation}
+% and denote $B_{[a,b],\epsilon,E}^{\pm}=\{\omega:(E,\omega)\in B_{[a,b],\epsilon}\}^{\pm}$.
+Large deviation theorem gives us the estimate that for all $E, a, b,\epsilon$
 \begin{equation}\label{ldt}
-P(B_{[a,b],\epsilon,E})\leq e^{-\eta(b-a+1)}
+P(B_{[a,b],\epsilon,E}^\pm)\leq e^{-\eta(b-a+1)}
 \end{equation}
-Also, denote $E_{j,[a,b],\omega},~j=1,2,\cdot,b-a+1$ as eigenvalues of $H_{[a,b],\omega}$.
-\end{remark}
 
-Assume $\epsilon=\epsilon_0<\frac{1}{8}\nu$ is fixed for now, so we omit it from the notations untill Theorem \ref{omega3}. And $\eta_0$ is the corresponding parameter
+Assume $\epsilon=\epsilon_0<\frac{1}{8}\nu$ is fixed for now, so we omit it from the notations until Theorem \ref{omega3}. $\eta_0=\eta(\epsilon_0)$ is the corresponding parameter from lemma \ref{ldt}.
 \begin{lemma}\label{lemma1}
- $n \geq 2$, if $x$ is $(\gamma(E)-8\epsilon_0,n,E,\omega)$-singular, then $(E,\omega)\in B_{[x-n,x+n]}^-\cup B_{[x-n,x]}^+\cup B_{[x,x+n]}^+$.
+For $n \geq 2$, if $x$ is $(\gamma(E)-8\epsilon_0,n,E,\omega)$-singular, then
+\[(E,\omega)\in B_{[x-n,x+n]}^-\cup B_{[x-n,x]}^+\cup B_{[x,x+n]}^+
+\]
 \end{lemma}
 \begin{remark}
   Note that from \eqref{ldt}, for all $E,x,n\geq 2$,
   \[
-    P(B_{[x-n,x+n],E}^-\cup B_{[x-n,x],E}^+\cup B_{[x,x+n],E}^+)\leq 3Ce^{-\eta_0 n}
+    P(B_{[x-n,x+n],E}^-\cup B_{[x-n,x],E}^+\cup B_{[x,x+n],E}^+)\leq 3e^{-\eta_0 (n+1)}
   \]
 \end{remark}
 \begin{proof}
-Follows imediately from definition of singularity and \eqref{A}.
+Follows imediately from the definition of singularity and \eqref{A}.
 % Assume not, then
 % \[
 %   \left\{
@@ -82,14 +87,23 @@ Follows imediately from definition of singularity and \eqref{A}.
 
 % By Theorem \ref{thm2},
 % From lemma \ref{lemma1}, we get our first restriction on $\Omega$ to make the bad sets have small measure.
-
+Now we will use three theorems to find the proper $\Omega_0$ for Theorem \ref{thm2}.
 \begin{thm}\label{omega1}
-  Let $0<\delta_0<\eta_0$, for a.e. $\omega$ (denote as $\Omega_1$), $\exists N_1=N_1(\omega)$, s.t. $\forall n>N_1$, $m(B_{[n+1,3n+1],\omega}^-)\leq e^{-(\eta_0-\delta_0)(2n+1)}$ and $m(B_{[-n,n],\omega}^-)\leq e^{-(\eta_0-\delta_0)(2n+1)}$
+  Let $0<\delta_0<\eta_0$. For a.e. $\omega$ (denote as $\Omega_1$), there exists $ N_1=N_1(\omega)$, such that for every $ n>N_1$,
+  \[
+  \max\{m(B_{[n+1,3n+1],\omega}^-),m(B_{[-n,n],\omega}^-)\}\leq e^{-(\eta_0-\delta_0)(2n+1)}
+  \]
 \end{thm}
 
 \begin{proof}
-  By \eqref{ldt}, $\forall E\in I$, $P(B_{[n+1,3n+1],E}^-)\leq e^{-\eta_0(2n+1)}$ and $P(B_{[-n,n],E}^-)\leq e^{-\eta_0(2n+1)}$
-
+  By \eqref{ldt},
+  % for every $ E\in I=\sigma$,which is compact, $P(B_{[n+1,3n+1],E}^-)\leq e^{-\eta_0(2n+1)}$ and $P(B_{[-n,n],E}^-)\leq e^{-\eta_0(2n+1)}$
+\[
+m\times\mathbb{P}(B_{[n+1,3n+1]}^-)\leq m(\sigma)e^{-\eta_0(2n+1)}
+\]
+\[
+m\times\mathbb{P}(B_{[-n,n]}^-)\leq m(\sigma)e^{-\eta_0(2n+1)}
+\]
   If we denote
     \[
       \Omega_{\delta_0,n,+}=\left\{\omega:m(B_{[n+1,3n+1],\omega}^-)\leq e^{-(\eta_0-\delta_0)(2n+1)}\right\}
@@ -104,7 +118,7 @@ Follows imediately from definition of singularity and \eqref{A}.
       % &\leq e^{(\eta_0-\delta_0)n}\int_{\Omega} m(B_{[n+1,3n+1],\omega})dP\omega\\
       % &=    e^{(\eta_0-\delta_0)n}\int_I P(B_{[n+1,3n+1],E})dx\\
       % &\leq e^{(\eta_0-\delta_0)n}m(I)e^{-\eta_0(2n+1)}\\
-      \leq m(I)e^{-\delta_0(2n+1)}
+      \leq m(\sigma)e^{-\delta_0(2n+1)}
   \]
 By Borel-Cantelli lemma, we get for $a.e.~\omega$,
 \[
@@ -117,58 +131,77 @@ for $n>N_1(\omega)$.
   For a.e.$\omega$(denote as $\Omega_2$), for all $E$, we have
   \[
     \begin{aligned}
-      &\varlimsup_{n\to\infty} \frac{1}{n+1} ln\Vert T_{[-n,0],E,\omega}\Vert\leq\gamma(E)\\
-      &\varlimsup_{n\to\infty} \frac{1}{n+1} ln\Vert T_{[0,n],E,\omega}\Vert\leq\gamma(E)\\
-      &\varlimsup_{n\to\infty} \frac{1}{n+1} ln\Vert T_{[n+1,2n+1],E,\omega}\Vert\leq\gamma(E)\\
-      &\varlimsup_{n\to\infty} \frac{1}{n+1} ln\Vert T_{[2n+1,3n+1],E,\omega}\Vert\leq\gamma(E)
-    \end{aligned}
+      &\max\{\varlimsup_{n\to\infty} \frac{1}{n+1} \log\Vert T_{[-n,0],E,\omega}\Vert, \varlimsup_{n\to\infty} \frac{1}{n+1} \log\Vert T_{[0,n],E,\omega}\Vert\}\leq\gamma(E)\\
+      &\max\{\varlimsup_{n\to\infty} \frac{1}{n+1}\log\Vert T_{[n+1,2n+1],E,\omega}\Vert, \varlimsup_{n\to\infty} \frac{1}{n+1} \log\Vert T_{[2n+1,3n+1],E,\omega}\Vert\}\leq\gamma(E)
+      \end{aligned}
+    % \end{aligned}
   \]
 \end{thm}
 \begin{cor}\label{omega2}
-  $\forall \omega\in\Omega_2,~\forall E$, $\exists N_2=N_2(\omega,E)$, s.t. $\forall n>N_2$,
-  \[
-    \begin{aligned}
-      &\Vert T_{[-n,0],E,\omega}\Vert< e^{(\gamma(E)+\epsilon)(n+1)}\\
-      &\Vert T_{[0,n],E,\omega}\Vert< e^{(\gamma(E)+\epsilon)(n+1)}\\
-      &\Vert T_{[n+1,2n+1],E,\omega}\Vert< e^{(\gamma(E)+\epsilon)(n+1)}\\
-      &\Vert T_{[2n+1,3n+1],E,\omega}\Vert< e^{(\gamma(E)+\epsilon)(n+1)}
-    \end{aligned}
-  \]
+  for every $ \omega\in\Omega_2$, for every $E$, there exists $N_2=N_2(\omega,E)$, such that for every $ n>N_2$,
+\[
+\begin{aligned}
+&\max\{\Vert T_{[-n,0],E,\omega}\Vert, \Vert T_{[0,n],E,\omega}\Vert\}<e^{(\gamma(E)+\epsilon)(n+1)}\\ &\max\{T_{[n+1,2n+1],E,\omega}\Vert, \Vert T_{[2n+1,3n+1],E,\omega}\Vert\}<e^{(\gamma(E)+\epsilon)(n+1)}
+\end{aligned}
+\]
+
+  % \[
+  %   \begin{aligned}
+  %     &\Vert T_{[-n,0],E,\omega}\Vert< e^{(\gamma(E)+\epsilon)(n+1)}\\
+  %     &\Vert T_{[0,n],E,\omega}\Vert< e^{(\gamma(E)+\epsilon)(n+1)}\\
+  %     &\Vert T_{[n+1,2n+1],E,\omega}\Vert< e^{(\gamma(E)+\epsilon)(n+1)}\\
+  %     &\Vert T_{[2n+1,3n+1],E,\omega}\Vert< e^{(\gamma(E)+\epsilon)(n+1)}
+  %   \end{aligned}
+  % \]
 \end{cor}
-\begin{remark}
-  Basically speaking, the only difference from Theorem 1.5 in \cite{craig1983subharmonicity} is that we are considering restrictions on some different box-sequences, for example $\{[n+1,2n+1]\}$, instead of the original boxes $\{[0,n]\}$. However, by\ref{LE}, $\gamma(E)$ keeps constant under $\{[n+1,2n+1]\}$, so subharmonic. While $\bar{\gamma_(E)}$ as limsup of $\gamma_(E)_[n+1,2n+1]$ is still submean since $\gamma_(E)_[n+1,2n+1]$ are submean. By properties of submean and subharmonic, together with Fustenberg Theorem and Fubini, we can get the results.
-\end{remark}
+% \begin{remark}
+%   Basically speaking, the only difference from Theorem 1.5 in \cite{craig1983subharmonicity} is that we are considering restrictions on some different box-sequences, for example $\{[n+1,2n+1]\}$, instead of the original boxes $\{[0,n]\}$. However, by\ref{LE}, $\gamma(E)$ keeps constant under $\{[n+1,2n+1]\}$, so subharmonic. While $\bar{\gamma_(E)}$ as limsup of $\gamma_(E)_[n+1,2n+1]$ is still submean since $\gamma_(E)_[n+1,2n+1]$ are submean. By properties of submean and subharmonic, together with Fustenberg Theorem and Fubini, we can get the results.
+% \end{remark}
 % \begin{proof}
 %   Only prove $[n+1,2n+1]$ case.\\
 %   Claim:
 %   \begin{enumerate}
 %     \item $\gamma(E)$ is subharmonic.
-%     \item $\varlimsup_{n\to\infty} \frac{1}{n+1} ln\Vert T_{[n+1,2n+1],E,\omega}\Vert$ is submean
+%     \item $\varlimsup_{n\to\infty} \frac{1}{n+1} \log\Vert T_{[n+1,2n+1],E,\omega}\Vert$ is submean
 %   \end{enumerate}
 % \end{proof}
 \begin{thm}\label{omega3}
-   $\epsilon>0,K>1$, For a.e.$\omega$(denote as $\Omega_3=\Omega_3(\epsilon,K)$), $\exists N_3=N_3(\omega)$, $\forall n>N_3$, $\forall E_{j,[n+1,3n+1],\omega}$, $\forall y_1,y_2$ satisfy $-n\leq y_1\leq y_2\leq n$,  $\abs{-n-y_1}\geq\frac{n}{K}$, and $\abs{n-y_2}\geq\frac{n}{K}$,
- we have $E_{j,[n+1,3n+1],\omega}\notin B_{[-n,y_1],\epsilon,\omega}\cup B_{[y_2,n],\epsilon,\omega}$.
+   Let $\epsilon>0,K>1$, For a.e.$\omega$(denote as $\Omega_3=\Omega_3(\epsilon,K)$), there exists $ N_3=N_3(\omega)$, for every $ n>N_3$, for every $ E_{j,(\omega_{n+1},\cdots,\omega_{3n+1})}$, for every $ y_1,y_2$ satisfying $-n\leq y_1\leq y_2\leq n$,  $\abs{-n-y_1}\geq\frac{n}{K}$, and $\abs{n-y_2}\geq\frac{n}{K}$,
+ we have $E_{j,(\omega_{n+1},\cdots,\omega_{3n+1})}\notin B_{[-n,y_1],\epsilon,\omega}\cup B_{[y_2,n],\epsilon,\omega}$.
 \end{thm}
 \begin{remark}
-  Note that $\epsilon$ and $K>0$ is not fixed yet, we're gonna determine it later on in section 4.
+  Note that $\epsilon$ and $K>0$ are not fixed yet, we're going to determine them later in section 4.
 \end{remark}
 
 \begin{proof}
 % In order to use Borel-Cantelli, one need to estimate
-Let
+Let $\bar{P}$
+% \[
+%   \bar{P}=P\left(\bigcup\limits_{y_1,y_2}\bigcup\limits_{j=1}^{2n+1}
+%   B_{[-n,y_1],\epsilon,E_{j,(\omega_a,\cdots,\omega_b)}\cup B_{[y_2,n],\epsilon,E_{j,(\omega_{n+1},\cdots,\omega_{3n+1})}\right)
+% \]
+be the probability that there are some $y_1, y_2, j$ with \[
+E_{j,(\omega_{n+1},\cdots,\omega_{3n+1})}\in B_{[-n,y_1],\epsilon,\omega}\cup B_{[y_2,n],\epsilon,\omega}.
+\] Note that for any fixed $\omega_c,\cdots,\omega_d $, with $[c,d]\cap[a,b]=\emptyset$, by independence,
 \[
-  \bar{P}=P\left(\bigcup\limits_{y_1,y_2}\bigcup\limits_{j=1}^{2n+1}
-  B_{[-n,y_1],\epsilon,E_{j,[n+1,3n+1],\omega}}\cup B_{[y_2,n],\epsilon,E_{j,[n+1,3n+1],\omega}}\right)
+\mathbb{P}(B_{[a,b],\epsilon,E_{j,(\omega_c,\cdots,\omega_d)}})=\mathbb{P}_{[a,b]}(B_{[a,b],\epsilon,E_{j,(\omega_c,\cdots,\omega_d)}})\leq e^{-\eta_0(b-a+1)}
 \]
-be the probability that there are some $y_1,y_2$ and $E_{j,[n+1,3n+1],\omega}$ satisfying the condition.
+Applying to $[a,b]=[-n,y_1]$ or $[y_2,n]$, $[c,d]=[n+1,3n+1]$ and integrating over $\omega_{-n},\cdots,\omega_{y_1}$ or $\omega_{y_2},\cdots,\omega_{n}$, we get
+\[
+\mathbb{P}(B_{[-n,y_1],\epsilon,E_{j,(\omega_{n+1},\cdots,\omega_{3n+1})}}\cup B_{[y_2,n],\epsilon,E_{j,(\omega_{n+1},\cdots,\omega_{3n+1})}}) \leq 2e^{-\eta_0(\frac{n}{K}+1)},
+\]
+so
+\[
+\bar{\mathbb{P}}\leq(2n+1)^3 2e^{-\eta_0(\frac{n}{K}+1)}
+\]
+Thus by Borel-Cantelli, we can get the result.
 % where $y_1,y_2$ satisfy assumptions above. Denote it by $\bar{P}$. Consider
 % \[
 %   \begin{aligned}
-%     P\left(B_{[y_2,n],\epsilon,E_{j,[n+1,3n+1],\omega}}\right)
-%     &= \int_\Omega \chi_{B_{[y_2,n],\epsilon,E_{j,[n+1,3n+1],\omega}}} dP\omega\\
+%     P\left(B_{[y_2,n],\epsilon,E_{j,(\omega_{n+1},\cdots,\omega_{3n+1})}\right)
+%     &= \int_\Omega \chi_{B_{[y_2,n],\epsilon,E_{j,(\omega_{n+1},\cdots,\omega_{3n+1})}} dP\omega\\
 %     &= \int_{S^{2n+1}}\left(\int_{\tilde{\Omega}} \chi_{B}~ d\tilde{\mu}\right)d\mu^{2n+1}(\omega_{n+1},\cdots,\omega_{3n+1})\\
-%     &=\int_{S^{2n+1}} \tilde{P}(\tilde{B}_{[y_2,n],\epsilon,E_{j,[n+1,3n+1],\omega}})d\mu^{2n+1}(\omega_{n+1},\cdots,\omega_{3n+1})
+%     &=\int_{S^{2n+1}} \tilde{P}(\tilde{B}_{[y_2,n],\epsilon,E_{j,(\omega_{n+1},\cdots,\omega_{3n+1})})d\mu^{2n+1}(\omega_{n+1},\cdots,\omega_{3n+1})
 %   \end{aligned}
 % \]
 % where for $\tilde{\Omega}$ and $\tilde{\mu}$, one take away the $[n+1,3n+1]$ terms from $\Omega$ and $\mu^{\mathbb{Z}}$
@@ -195,15 +228,15 @@ be the probability that there are some $y_1,y_2$ and $E_{j,[n+1,3n+1],\omega}$ s
 % \]
 % So
 % \[
-% P\left(B_{[y_2,n],\epsilon,E_{j,[n+1,3n+1],\omega}}\right)\leq Ce^{-\abs{n-y_2-}}\leq Ce^{-n/K}
+% P\left(B_{[y_2,n],\epsilon,E_{j,(\omega_{n+1},\cdots,\omega_{3n+1})}\right)\leq Ce^{-\abs{n-y_2-}}\leq Ce^{-n/K}
 % \]
 % \[
 % \bar{P}\leq C(2n+1)^3e^{-n/K}
 % \]
 % The sum over n is finite, use Borel-Cantelli, we can get the result.
-By \eqref{ldt}, for any $E$, $P(B_{[a,b],E})<e^{-\eta_0-\delta_0(b-a+1)}$. Since $B_{[a,b],E}$ is a cylinder set that depends only on $\omega_i, i\in[a,b]$, we have that for any $[c,d]\cap[a,b]=\emptyset$,
-\[
-  P(B_[a,b],E|\{\omega: E=E_{j,[c,d],\omega}\})=P(B_[a,b],E)
-\]
-Integrating over  ?
+% By \eqref{ldt}, for any $E$, $P(B_{[a,b],E})<e^{-\eta_0-\delta_0(b-a+1)}$. Since $B_{[a,b],E}$ is a cylinder set that depends only on $\omega_i, i\in[a,b]$, we have that for any $[c,d]\cap[a,b]=\emptyset$,
+% \[
+%   P(B_[a,b],E|\{\omega: E=E_{j,[c,d],\omega}\})=P(B_[a,b],E)
+% \]
+% Integrating over  ?
 \end{proof}
