--- a/body/sec2.tex
+++ b/body/sec2.tex
@@ -1,39 +1,37 @@
 \section{general setup}
-
-\begin{definition}[$g.e.v.$]
-    We call $E$ a generalized eigenvalue (denote as $g.e.v.$), if there exists a nonzero polynomially bounded function $\Psi(n)$ such that $H\Psi=E\Psi$. We call $\Psi(n)$ generalized eigenfunction.
+We know that
+\begin{equation}\label{sigma}
+\sigma:=\sigma(H_{\omega})=[-2,2]+S\quad a.e.\omega
+\end{equation}
+\begin{definition}
+    We call $E$ a generalized eigenvalue (denote as g.e.), if there exists a nonzero polynomially bounded function $\Psi(n)$ such that $H\Psi=E\Psi$. We call $\Psi(n)$ generalized eigenfunction.
 \end{definition}
-Then due to the fact from \cite{simon1982schrodinger} that:
-With respect to spectral measure $\mu$,
-\[
-\mu (\{g.e.v\}^c=0)
-\]
-We only need to show:
+Since the set of g.e. supports the spectral measure of $H_\omega$, we only need to show:
 \begin{thm}\label{thm1}
-  For a.e. $\omega$, $\forall$~g.e.v.~E. The corresponding generalized eigenfunction $\Psi_{\omega,E}(n)$ decays exponentially in $n$.
+  For a.e. $\omega$, for every g.e. E, the corresponding generalized eigenfunction $\Psi_{\omega,E}(n)$ decays exponentially in $n$.
 \end{thm}
 
-In order to get the dacaying speed of $\Psi$, We estimates the decaying speed of the Green's functions. Assume $[a,b]$ is an interval, $a,b\in\mathbb{Z}$, define $H_{[a,b],\omega}$ to be the the operator $H_\omega$ resticted to $[a,b]$ with zero boundary condition outside $[a,b]$. Note that it can be expressed as a "$b-a+1$"-dim matrix.
-The Green's function defined on $[a,b]$ for $H_\omega$ with energy $E\notin\sigma(H)$ is
+For $[a,b]$ an interval, $a,b\in\mathbb{Z}$, define $H_{[a,b],\omega}$ to be operator $H_\omega$ resticted to $[a,b]$ with zero boundary condition outside $[a,b]$. Note that it can be expressed as a "$b-a+1$"-dimensional matrix.
+The Green's function defined on $[a,b]$ for $H_\omega$ with energy $E\notin\sigma_{[a,b],\omega}$ is
   \[
     G_{[a,b],E,\omega}=(H_{[a,b],\omega}-E)^{-1}
   \]
-Note that this can also be expressed as a "$b-a+1$"-dim matrix. Denote its $x$ line $y$ column elements as $G_{[a,b],E,\omega}(x,y)$.
+Note that this can also be expressed as a "$b-a+1$"-dimensional matrix. Denote its $(x,y)$ entry as $G_{[a,b],E,\omega}(x,y)$.
 
-By the well-known formula:
+We have
   \begin{equation}\label{possion}
     \Psi(x)=-G_{[a,b],E,\omega}(x,a)\Psi(a-1)-G_{[a,b],E,\omega}(x,b)\Psi(b+1),\quad x\in[a,b]
   \end{equation}
+%
+% If one can get that, the Green's function near $n$, say, for example on $[n-k,n+k]$, is decaying somehow exponentially in $n$ as $n$ growing, then since $\Psi$ on the  right-hand-side is polynomially bounded, $\Psi(n)$ on the left-hand-side will decay exponentially in $n$, too.
 
-If one can get that, the Green's function near $n$, say, for example on $[n-k,n+k]$, is decaying somehow exponentially in $n$ as $n$ growing, then since $\Psi$ on the  right-hand-side is polynomially bounded, $\Psi(n)$ on the left-hand-side will decay exponentially in $n$, too.
-
-This inspires us to define "regular and singular".
+% inspires us to define "regular and singular".
 
 % \begin{definition}
 % $\mathcal{A}_{[a,b]}=\{[a,b],[a,b-1],[a+1,b],[a+1,b-1]\}$
 % \end{definition}
 \begin{definition}
-   For $c>0, n\in\mathbb{Z}$, we say $n\in\mathbb{Z}~$ is $(c,n,E,\omega)$-regular, if
+   For $c>0, n\in\mathbb{Z}$, we say $x\in\mathbb{Z}~$ is $(c,n,E,\omega)$-regular, if
   \[
     G_{[x-n,x+n],E,\omega}(x,x-n) \leq e^{-cn}
   \]
@@ -44,15 +42,15 @@ This inspires us to define "regular and singular".
   Otherwise, we call it $(c,n,E,\omega)$-singular.
 \end{definition}
 
-So we only need to prove
+By \eqref{possion} and definition 2, Theorem  \ref{thm1} follows from
 \begin{thm}\label{thm2}
-  $\exists \Omega_0$ with $P(\Omega_0)=1$, s.t. $\forall \tilde{\omega}\in\Omega_0$, for any $g.e.v.~\tilde{E}$ of $H_{\tilde{\omega}}$, $\exists N=N(\tilde{E},\tilde{\omega}),C=C(\tilde{E})$, $\forall n>N$, $2n+1$ is $(C,n,\tilde{E},\tilde{\omega})$ regular.
+  There exists $ \Omega_0$ with $P(\Omega_0)=1$, such that for every $ \tilde{\omega}\in\Omega_0$, for any g.e.$\tilde{E}$ of $H_{\tilde{\omega}}$, there exist $ N=N(\tilde{E},\tilde{\omega}),C=C(\tilde{E})$, for every $ n>N$, $2n,~2n+1$ are $(C,n,\tilde{E},\tilde{\omega})$ regular.
 \end{thm}
-\begin{remark}
-  It's similar for even terms. We omit them only because of notation reasons.
-\end{remark}
 % \begin{remark}
-%   Because if we achieve this, denote the corresponding polynomially bounded generalized eigenfunction as $\Psi(n)=\Psi_{\tilde{\omega},\tilde{E}}(n)\leq M(1+n)^p$, for $p>0$. Then $\forall n>N$, let $A_n=[n+1,3n+1]$
+%   It's similar for even terms. We omit them only because of notation reasons.
+% \end{remark}
+% \begin{remark}
+%   Because if we achieve this, denote the corresponding polynomially bounded generalized eigenfunction as $\Psi(n)=\Psi_{\tilde{\omega},\tilde{E}}(n)\leq M(1+n)^p$, for $p>0$. Then for every $ n>N$, let $A_n=[n+1,3n+1]$
 %   \[
 %   \left\vert G_{A_n,E,\omega}(x,\partial A_n)\right\vert \leq e^{-C\abs{x-\partial A_n}}
 %   \]
@@ -63,18 +61,17 @@ So we only need to prove
 %   So for large enough $n$, $\Psi(2n+1)$ decays exponentially in $n$. Similarly for even terms and we will get Theorem \ref{thm1}.
 % \end{remark}
 
-Some other basic settings are below. If we denote
+Some other basic settings are below. Denote
 \[
   P_{[a,b],E,\omega}=det(H_{[a,b],E,\omega}-E)
 \]
-if $a=b$, let $  P_{[a,b],E,\omega}=1$ for next formula.
-By linear algebra calculation, we get:(if $x\leq y$)
+If $a=b$, let $  P_{[a,b],E,\omega}=1$, then
 \begin{equation}\label{A}
   \left\vert G_{[a,b],E,\omega}(x,y)\right\vert=\frac{\left\vert P_{[a,x-1],E,\omega}P_{[y+1,b],E,\omega}\right\vert}{\left\vert P_{[a,b],E,\omega}\right\vert},\quad x\leq y
 \end{equation}
-  \[
-  \left\vert G_{[a,b](x,y),E,\omega}\right\vert=\frac{\left\vert P_{[a,y-1],E,\omega}P_{[x+1,b],E,\omega}\right\vert}{\left\vert P_{[a,b],E,\omega}\right\vert},\quad x\geq y?
-\]
+%   \[
+%   \left\vert G_{[a,b](x,y),E,\omega}\right\vert=\frac{\left\vert P_{[a,y-1],E,\omega}P_{[x+1,b],E,\omega}\right\vert}{\left\vert P_{[a,b],E,\omega}\right\vert},\quad x\geq y?
+% \]
 If we denote the transfer matrix $T_{[a,b],E,\omega}$ as the matrix such that
 \[
 \left(
@@ -90,7 +87,7 @@ If we denote the transfer matrix $T_{[a,b],E,\omega}$ as the matrix such that
 \end{array}
 \right)
 \]
-We can prove by induction that
+then
 \[
 T_{[a,b],E,\omega}=\left(
   \begin{array}{cc}
@@ -99,19 +96,41 @@ T_{[a,b],E,\omega}=\left(
   \end{array}
   \right)
 \]
-\begin{definition}[Lyapunov Exponent]\label{LE}
+The Lyapunov exponent is given by
   \[
-    \gamma(E)=\lim_{n\to\infty}\frac{1}{n}\int_0^1 ln\Vert T_{[0,n],E,\omega}\Vert dP(\omega)=\lim_{n\rightarrow\infty}\frac{1}{n} ln\Vert T_{[0,n],E,\omega}\Vert
+    \gamma(E)=\lim_{n\to\infty}\frac{1}{n}\int_0^1 \log\Vert T_{[0,n],E,\omega}\Vert dP(\omega)=\lim_{n\rightarrow\infty}\frac{1}{n} \log\Vert T_{[0,n],E,\omega}\Vert, \quad a.e.\omega.
   \]
-  \[\nu=\inf\limits_{E\in I}\gamma(E)>0\]
-\end{definition}
+Let $\nu=\inf\limits_{E\in \sigma}\gamma(E)>0$.
+
+We introduce the large deviation theorem here without proof.
+\cite{tsay1999some}
+\begin{lemma}[Large deviation estimates]
+  For any $\epsilon>0$, there exists $\eta=\eta(\epsilon)>0$ such that, there exists $N_0=N_0(\epsilon)$, for every $ b-a>N_0$
+  \[
+  \mu \left\{ \omega:\left\vert \frac{1}{b-a+1} \log\Vert P_{[a,b],E,\omega}\Vert-\gamma(E) \right\vert\geq\epsilon
+   \right\} \leq e^{-\eta (b-a+1)}
+  \]
+\end{lemma}
+%
+% Denote
+% \begin{equation}\label{B+}
+%     B_{[a,b],\epsilon}^{+} =\left\{(E,\omega): |P_{[a,b],E,\omega}|\geq e^{(\gamma(E)+\epsilon)(b-a+1)}\right\}
+% \end{equation}
+% \begin{equation}\label{B-}
+%     B_{[a,b],\epsilon}^{-} =\left\{(E,\omega): |P_{[a,b],E,\omega}|\leq e^{(\gamma(E)-\epsilon)(b-a+1)}\right\}\
+% \end{equation}
+% and denote $B_{[a,b],\epsilon,E}^{\pm}=\{\omega:(E,\omega)\in B_{[a,b],\epsilon}^{\pm}\}$, $B_{[a,b],\epsilon,\omega}^{\pm}=\{E:(E,\omega)\in B_{[a,b],\epsilon}^{\pm}\}$,
+% $B_{[a,b],*}=B_{[a,b],*}^+\cup B_{[a,b],*}-$.
+%
+% Let $E_{j,(\omega_a,\cdots,\omega_b)}$ be the eigenvalue of $H_{[a,b],\omega}$ with $\omega|_{[a,b]}=(\omega_a,\cdots,\omega_b)$.
+
 % The main technique is to find the proper set $\Omega_0$. Roughly speaking, the idea is: a point $x$ is $(C,k,E,\omega)$-singular means the corresponding pair $(E,\omega)$ is in some "bad" "large deviation set" for operators restricted near $x$, say, $H_{[x-k,x+k]}$. We can then pick proper set $\Omega_1$ such that these bad sets have small measures. Then pick $\Omega_2$ such that $E$ is not only in these bad sets, but also stay very close to eigenvalues of $H_{[x-k,x+k]}$ which are also in these bad sets. In this case, if we pick $\tilde{\omega}\in\Omega_1\cap\Omega_2$ and if $0$ and $2n+1$ are both $(C,n,\tilde{E},\tilde{\omega})$-singular, then $\tilde{E}$ will  be close to both eigenvalues $E_{i,n}$ of $H_{[-n,n]}$ near $0$ and eigenvalues $E_{j,n}$ of $H_{[n+1,3n+1]}$ near $2n+1$. So now $\tilde{E}$ is in bad sets for both intervals and are closed to both e.v., where each e.v. only belongs to bad sets for their own intervals. Which leads to a contradiction because the bad sets are so small that we can pick $\Omega_3$ by Borel Cantelli, such that eventually all the eigenvalues of $[n+1,3n+1]$ can't stay in bad set for $[-n,n]$,
 
 
 % In order to find the set $\Omega_0$, we give these three Theorems, each provides us some nice properties we need to make $2n+1$ $(C,n,\tilde{E},\tilde{\omega})$-regular.
 %
 % \begin{thm}
-%   for $a.e.\omega$ (denote the set as $\Omega_1$), $\exists N_1=N_1(\omega)$, s.t. $\forall n>N_1$,
+%   for $a.e.\omega$ (denote the set as $\Omega_1$), there exists $ N_1=N_1(\omega)$, such that for every $ n>N_1$,
 %   \[
 %   m(B_{[-n,n],\omega}^{-})\leq Ce^{-(\eta-\delta)(2n+1)}
 %   \]
