--- a/body/sec4.tex
+++ b/body/sec4.tex
@@ -1,100 +1,117 @@
 \section{Proof of Theorem 2.2}
+We will only provide a proof that $2n+1$ is $(c, n, E,\omega)$-regular, the argument for $2n$ being similar.
 \begin{proof}
-Let $\Omega_0=\Omega_1\cap\Omega_2\cap\Omega_3(\epsilon,K)$  ($\epsilon,K$ to be determined later), pick $\tilde{\omega}\in\Omega_0$, take $\tilde{E}$ a g.e.v. for $H_{\tilde{\omega}}$.
-WLOG assume $\Psi(0)\neq 0$, then $\exists N_4$, s.t. $\forall n>N_4$, 0 is $(\gamma(\tilde{E})-8\epsilon_0,n,\tilde{E},\tilde{\omega})$-singular.
+Let $\epsilon$ be small enough such that
+  \begin{equation}\label{epsilon1}
+    \epsilon<\min\{(\eta_0-\delta_0)/3,\nu\}.
+  \end{equation}
+Now let
+  \[L:=e^{(\eta_0-\delta_0-\epsilon)}>1,\]
+and note that since $V$ is bounded, by \ref{sigma} we have there exists $ M>0$, such that
+\[
+|P_{[a,b],E,\omega}|<M^{(b-a+1)},\quad \forall E\in\sigma,\omega
+\]
+Pick $K$ big enough such that
+  \[M^{\frac{1}{K}}<L\]
+Let$ \sigma>0$ be such that
+\begin{equation}\label{K}
+M^{\frac{1}{K}}\leq L-\sigma<L
+\end{equation}
+Let $\Omega_0=\Omega_1\cap\Omega_2\cap\Omega_3(\epsilon,K)$, pick $\tilde{\omega}\in\Omega_0$, take $\tilde{E}$ a g.e. for $H_{\tilde{\omega}}$.
+WLOG assume $\Psi(0)\neq 0$, then there exists $ N_4$, such that for every $ n>N_4$, 0 is $(\gamma(\tilde{E})-8\epsilon_0,n,\tilde{E},\tilde{\omega})$-singular.
 
-% Assume $2n+1$ is not eventually $(\gamma(\tilde{E})-8\epsilon_0,n,\tilde{E},\tilde{\omega})$-regular, then $\exists \{n_k\}$ with $n_k\to\infty$, s.t. $2n_k+1$ is  $(\gamma(\tilde{E})-3\epsilon_0,n_k,\tilde{E},\tilde{\omega})$-singular.
+% Assume $2n+1$ is not eventually $(\gamma(\tilde{E})-8\epsilon_0,n,\tilde{E},\tilde{\omega})$-regular, then there exists $ \{n_k\}$ with $n_k\to\infty$, such that $2n_k+1$ is  $(\gamma(\tilde{E})-3\epsilon_0,n_k,\tilde{E},\tilde{\omega})$-singular.
 
-For $n>N_0=\max{N_1,N_2,N_3,N_4}$, assume $2n+1$ is $(\gamma(\tilde{E})-8\epsilon_0,n,\tilde{E},\tilde{\omega})$-singular.
+For $n>N_0=\max{N_1(\tilde{\omega}),N_2(\tilde{\omega},\tilde{E}),N_3(\tilde{\omega}),N_4(\tilde{\omega},\tilde{E})}$, assume $2n+1$ is $(\gamma(\tilde{E})-8\epsilon_0,n,\tilde{E},\tilde{\omega})$-singular.
 % WLOG use $\{n\}$ istead of $\{n_k\}$, we have that
 \begin{itemize}
   \item Both $0$ and $2n+1$ is $(\gamma(\tilde{E})-8\epsilon_0,n,\tilde{E},\tilde{\omega})$-singular.
-  \item So by lemma \ref{lemma1},  $\tilde{E}\in B_{[n+1,3n+1],\epsilon_0,\tilde{\omega}}^-\cup B_{[n+1,2n+1],\epsilon_0,\tilde{\omega}}^+\cup B_{[2n+1,3n+1],\epsilon_0,\tilde{\omega}}^+$.
-  \item By corollary \ref{omega2} and \eqref{B+}, $\tilde{E}\notin B_{[n+1,2n+1],\epsilon_0,\tilde{\omega}}^+\cup B_{[2n+1,3n+1],\epsilon_0,\tilde{\omega}}^+$, so it can only lies in $B_{[n+1,3n+1],\epsilon_0,\tilde{\omega}}^-$
+  \item So by Lemma \ref{lemma1},  $\tilde{E}\in B_{[n+1,3n+1],\epsilon_0,\tilde{\omega}}^-\cup B_{[n+1,2n+1],\epsilon_0,\tilde{\omega}}^+\cup B_{[2n+1,3n+1],\epsilon_0,\tilde{\omega}}^+$.
+  \item By Corollary \ref{omega2} and \eqref{B+}, $\tilde{E}\notin B_{[n+1,2n+1],\epsilon_0,\tilde{\omega}}^+\cup B_{[2n+1,3n+1],\epsilon_0,\tilde{\omega}}^+$, so it can only lie in $B_{[n+1,3n+1],\epsilon_0,\tilde{\omega}}^-$
   \item
   % But  by \eqref{B-}.
   % \begin{equation}\label{bad}
   %   B_{[n+1,3n+1],\epsilon_0,\tilde{\omega}}^-= \left\{E:|P_{[n+1,3n+1],\epsilon,E,\tilde{\omega}}|\leq e^{(\gamma(E)-\epsilon_0)(2n+1)}\right\}
   % \end{equation}
-   Note that by \eqref{B-}, $P_{[n+1,3n+1],\epsilon,\epsilon_0,E,\tilde{\omega}}$ in $B=B_{[n+1,3n+1],\epsilon,\tilde{\omega}}$ is a polynomial in $E$ that have $2n+1$ real zeros (eigenvalues of $H_{[n+1,3n+1],\tilde{\omega}}$), which are all in $B$. Thus $B$ contains less than $2n+1$ intervals near the eigenvalues. $\tilde{E}$ should lie in one of them. By Theorem \ref{omega1}, $m(B)\leq Ce^{-(\eta_0-\delta_0)(2n+1)}$. So there is some e.v. $E_{j,[n+1,3n+1],\tilde{\omega}}$ of $H_{[n+1,3n+1],\omega}$ s.t.
+   Note that in \eqref{B-}, $P_{[n+1,3n+1],\epsilon,\epsilon_0,E,\tilde{\omega}}$ is a polynomial in $E$ that has $2n+1$ real zeros (eigenvalues of $H_{[n+1,3n+1],\tilde{\omega}}$), which are all in $B=B_{[n+1,3n+1],\epsilon,\tilde{\omega}}$. Thus $B$ contains less than $2n+1$ intervals near the eigenvalues. $\tilde{E}$ should lie in one of them. By Theorem \ref{omega1}, $m(B)\leq Ce^{-(\eta_0-\delta_0)(2n+1)}$. So there is some e.v. $E_{j,[n+1,3n+1],\tilde{\omega}}$ of $H_{[n+1,3n+1],\omega}$ such that
    \[
    \vert\tilde{E}-E_{j,[n+1,3n+1],\tilde{\omega}}\vert\leq e^{-(\eta_0-\delta_0)(2n+1)}
    \]
-  By the same argument, $\exists E_{i,[-n,n],\tilde{\omega}}$, s.t.
+  By the same argument, there exists $ E_{i,[-n,n],\tilde{\omega}}$, such that
    \[
    \vert\tilde{E}-E_{i,[-n,n],\tilde{\omega}}\vert\leq e^{-(\eta_0-\delta_0)(2n+1)}
    \]
-   \item So $\vert E_{i,[-n,n],\tilde{\omega}}-E_{j,[n+1,3n+1],\tilde{\omega}}\vert\leq 2e^{-(\eta_0-\delta_0)(2n+1)}$. However, by Theorem \ref{omega3}, one have $E_{j,[n+1,3n+1],\tilde{\omega}}\notin B_{[-n,n],\epsilon,\tilde{\omega}}$, while $E_{i,[-n,n],\tilde{\omega}}\in B_{[-n,n],\epsilon,\tilde{\omega}}$
+   \item So $\vert E_{i,[-n,n],\tilde{\omega}}-E_{j,[n+1,3n+1],\tilde{\omega}}\vert\leq 2e^{-(\eta_0-\delta_0)(2n+1)}$. However, by Theorem \ref{omega3}, one has $E_{j,[n+1,3n+1],\tilde{\omega}}\notin B_{[-n,n],\epsilon,\tilde{\omega}}$, while $E_{i,[-n,n],\tilde{\omega}}\in B_{[-n,n],\epsilon,\tilde{\omega}}$
    This will give us a contradiction below.
 \end{itemize}
 ~\\
-Since $\vert E_{i,[-n,n],\tilde{\omega}}-E_{j,[n+1,3n+1],\tilde{\omega}}\vert\leq 2e^{-(\eta_0-\delta_0)(2n+1)}$ and $E_{i,[-n,n],\tilde{\omega}}$ being the e.v. of $H_{[-n,n],\tilde{\omega}}$,
+Since $\vert E_{i,[-n,n],\tilde{\omega}}-E_{j,[n+1,3n+1],\tilde{\omega}}\vert\leq 2e^{-(\eta_0-\delta_0)(2n+1)}$ and $E_{i,[-n,n],\tilde{\omega}}$ is the e.v. of $H_{[-n,n],\tilde{\omega}}$,
 \[
   \left\Vert G_{[-n,n],E_{j,[n+1,3n+1],\tilde{\omega}},\tilde{\omega}}\right\Vert\geq \frac{1}{2}e^{(\eta_0-\delta_0)(2n+1)}
 \]
-So $\exists y_{n1},y_{n2}\in [-n,n]$ s.t.
-NEED FIX
+So there exists $ y_{1},y_{2}\in [-n,n]$ and such that
+% Need fix
 \[
-  \left\vert G_{[-n,n],E_{j,[n+1,3n+1],\tilde{\omega}},\tilde{\omega}}(y_{n1},y_{n2})\right\vert\geq \frac{1}{2}e^{(\eta_0-\delta_0)(2n+1)}
+  \left\vert G_{[-n,n],E_{j,[n+1,3n+1],\tilde{\omega}},\tilde{\omega}}(y_{1},y_{2})\right\vert\geq \frac{1}{2n}e^{(\eta_0-\delta_0)(2n+1)}
 \]
-But $E_{j,[n+1,3n+1],\omega}\notin B_{[-n,n],\epsilon,\tilde{\omega}}$, i.e.
+Let $E_j=E_{j,[n+1,3n+1],\tilde{\omega}}$, we have $E_j\notin B_{[-n,n],\epsilon,\tilde{\omega}}$, i.e.
 \[
-\vert P_{[-n,n],\epsilon,E_{j,[n+1,3n+1],\omega},\tilde{\omega}}\vert\geq e^{(\gamma(E_j)-\epsilon)(2n+1)}
+\vert P_{[-n,n],\epsilon,E_j,\tilde{\omega}}\vert\geq e^{(\gamma(E_j)-\epsilon)(2n+1)}
 \]
 so
 \begin{equation}\label{last}
-  \left\Vert P_{[-n,y_{n1}],\epsilon,E_j}P_{[y_{n2},n],\epsilon,E_j}\right\Vert\geq\frac{1}{2}e^{(\eta_0-\delta-0)(2n+1)}e^{(\gamma(E_j)-\epsilon)(2n+1)}
+  \left\Vert P_{[-n,y_{1}],\epsilon,E_j，\tilde{\omega}}P_{[y_{2},n],\epsilon,E_j,\tilde{\omega}}\right\Vert\geq\frac{1}{2n}e^{(\eta_0-\delta_0)(2n+1)}e^{(\gamma(E_j)-\epsilon)(2n+1)}
 \end{equation}
-Let $M= sup\{|V|+|E_j|+2\}$, where $|V|$ is assumed bounded, $E_i,E_j$ are bounded because they are close to $E\in I$.\\
-Then pick $\epsilon$ small enough in Theorem \ref{omega3} s.t.
-  \begin{equation}\label{epsilon1}
-    \epsilon<\min\{(\eta_0-\delta_0)/3,\nu\}
-  \end{equation}
-and fix it, then let
-  \[L:=e^{(\eta_0-\delta_0-\epsilon)}>1\]
-Pick $K$ big enough in Theorem \ref{omega3} to be s.t.
-  \[(3M)^{\frac{1}{K}}<L\]
-say, $\exists \sigma>0$,
-\begin{equation}\label{K}
-(3M)^{\frac{1}{K}}\leq L-\sigma<L
-\end{equation}
-then for left hand side of \eqref{last}, there are three cases:
+% Let $M= sup\{|V|+|E_j|+2\}$, where $|V|$ is assumed bounded, $E_i,E_j$ are bounded because they are close to $E\in I$.\\
+% Then pick $\epsilon$ small enough in Theorem \ref{omega3} such that
+%   \begin{equation}\label{epsilon1}
+%     \epsilon<\min\{(\eta_0-\delta_0)/3,\nu\}
+%   \end{equation}
+% and fix it, then let
+%   \[L:=e^{(\eta_0-\delta_0-\epsilon)}>1\]
+% Pick $K$ big enough in Theorem \ref{omega3} to be such that
+%   \[(3M)^{\frac{1}{K}}<L\]
+% say, there exists $ \sigma>0$,
+% \begin{equation}\label{K}
+% (3M)^{\frac{1}{K}}\leq L-\sigma<L
+% \end{equation}
+Then for the left hand side of \eqref{last}, there are three cases:
 \begin{enumerate}
-  \item both $|-n-y_{1n}|>\frac{n}{K}$ and $|n-y_{2n}|>\frac{n}{K}$
-  \item one of them is large, say $|-n-y_{1n}|>\frac{n}{K}$ and $|x_{2n}-y{_2n}|\leq\frac{n}{K}$
+  \item both $|-n-y_{1}|>\frac{n}{K}$ and $|n-y_{2}|>\frac{n}{K}$
+  \item one of them is large, say $|-n-y_{1}|>\frac{n}{K}$ while $|n-y_{2}|\leq\frac{n}{K}$
   \item both small.
 \end{enumerate}
 
-for $(1)$,
+For $(1)$,
 \[
-\frac{1}{2}e^{(\eta_0-\delta_0+\gamma(E_j)-\epsilon)(2n+1)}\leq e^{2n(\gamma(E_j)+\epsilon)}
+\frac{1}{2n}e^{(\eta_0-\delta_0+\gamma(E_j)-\epsilon)(2n+1)}\leq e^{2n(\gamma(E_j)+\epsilon)}
 \]
-by our choice \eqref{epsilon1},
- $\eta-\delta+\gamma(E_j)-\epsilon>\gamma(E_j)+\epsilon$. Then for $n$ large enough, we get contradiction.
+Since by our choice \eqref{epsilon1},
+ $\eta_0-\delta_0+\gamma(E_j)-\epsilon>\gamma(E_j)+\epsilon$, for $n$ large enough, we get a contradiction.
 
-for $(2)$, similarly with \eqref{epsilon1} and\eqref{K}
+For $(2)$,
 \[
-  \begin{aligned}
-    \frac{1}{2}e^{(\eta_0-\delta_0+\gamma(E_j)-\epsilon)(2n+1)}
-    &\leq e^{(\gamma(E_j)+\epsilon)(2n+1)}(3M)^{\frac{n}{K}}\\
-    \frac{1}{2}e^{(\eta_0-\delta_0-\epsilon)(2n+1)}&\leq e^{\epsilon(2n+1)} L^n\\
-    &\leq e^{\epsilon(2n+1)} e^{(\eta_0-\delta_0-\epsilon)n}\\
-    \frac{1}{2}e^{(\eta_0-\delta_0-\epsilon)(n+1)}
-    &\leq e^{2\epsilon(n+1)}
-  \end{aligned}
+  % \begin{aligned}
+    \frac{1}{2n}e^{(\eta_0-\delta_0+\gamma(E_j)-\epsilon)(2n+1)}
+    \leq e^{(\gamma(E_j)+\epsilon)(2n+1)}(M)^{\frac{n}{K}}
+    % \frac{1}{2Cn}e^{(\eta_0-\delta_0-\epsilon)(2n+1)}&\leq e^{\epsilon(2n+1)} L^n\\
+    % &\leq e^{\epsilon(2n+1)} e^{(\eta_0-\delta_0-\epsilon)n}\\
+    % \frac{1}{2Cn}e^{(\eta_0-\delta_0-\epsilon)(n+1)}
+    % &\leq e^{2\epsilon(n+1)}
+  % \end{aligned}
 \]
-We get contradiction.
+is in contradiction with \eqref{epsilon1} and \eqref{K}
 
-for $(3)$,with \eqref{epsilon1} and \eqref{K}
+For $(3)$,with \eqref{epsilon1} and \eqref{K}
 \[
 \begin{aligned}
-  \frac{1}{2}e^{(\eta_0-\delta_0+\gamma(E_j)-\epsilon)(2n+1)}
-  &\leq (3M)^{\frac{2n}{K}}\\
+  \frac{1}{2n}e^{(\eta_0-\delta_0+\gamma(E_j)-\epsilon)(2n+1)}
+  &\leq M^{\frac{2n}{K}}\\
   &\leq (L-\sigma)^{2n}\\
   &\leq(e^{(\eta_0-\delta_0+\gamma(E_j)-\epsilon)}-\sigma)^{2n}
 \end{aligned}
 \]
-Contradiction.
+also a contradiction.
 
-So our assumption that $2n+1$ is not eventually $(\gamma(\tilde{E})-8\epsilon_0,n,\tilde{E},\tilde{\omega})$-regular is flase. Theorem \ref{thm2} follows.
+So our assumption that $2n+1$ is not  $(\gamma(\tilde{E})-8\epsilon_0,n,\tilde{E},\tilde{\omega})$-regular is false. Theorem \ref{thm2} follows.
 \end{proof}
