--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,8 @@
 \input{body/sec2}
 \input{body/sec3}
 \input{body/sec4}
+\input{body/sec5}
+\input{body/sec6}
 
 % \cite{simon1982schrodinger}
 % \cite{von1989new}
