--- a/settings/settings.tex
+++ b/settings/settings.tex
@@ -6,7 +6,7 @@
 %
 % \DeclareMathOperator*{\cart}{\times}
 \newtheorem{thm}{Theorem}[section]
-\newtheorem{lemma}{Lemma}
+\newtheorem{lemma}[thm]{Lemma}
 \newtheorem{cor}{Corollary}
 
 \theoremstyle{definition}
