--- a/body/mybib1.bib
+++ b/body/mybib1.bib
@@ -57,3 +57,13 @@
   year={1999},
   publisher={JSTOR}
 }
+@article{del1996operators,
+  title={Operators with singular continuous spectrum, IV. Hausdorff dimensions, rank one perturbations, and localization},
+  author={del Rio, Rafael and Jitomirskaya, Svetlana and Last, Yoram and Simon, Barry},
+  journal={Journal d'Analyse Math{\'e}matique},
+  volume={69},
+  number={1},
+  pages={153--200},
+  year={1996},
+  publisher={Springer}
+}
