--- a/body/sec4.tex
+++ b/body/sec4.tex
@@ -7,7 +7,7 @@ Let $\epsilon$ be small enough such that
   \end{equation}
 Now let
   \[L:=e^{(\eta_0-\delta_0-\epsilon)}>1,\]
-and note that since $V$ is bounded, by \ref{sigma} we have there exists $ M>0$, such that
+and note that since $V$ is bounded, by \eqref{sigma} we have there exists $ M>0$, such that
 \[
 |P_{[a,b],E,\omega}|<M^{(b-a+1)},\quad \forall E\in\sigma,\omega
 \]
@@ -17,18 +17,18 @@ Let$ \sigma>0$ be such that
 \begin{equation}\label{K}
 M^{\frac{1}{K}}\leq L-\sigma<L
 \end{equation}
-Let $\Omega_0=\Omega_1\cap\Omega_2\cap\Omega_3(\epsilon,K)$, pick $\tilde{\omega}\in\Omega_0$, take $\tilde{E}$ a g.e. for $H_{\tilde{\omega}}$.
-WLOG assume $\Psi(0)\neq 0$, then there exists $ N_4$, such that for every $ n>N_4$, 0 is $(\gamma(\tilde{E})-8\epsilon_0,n,\tilde{E},\tilde{\omega})$-singular.
+Let $\Omega_0=\Omega_1\cap\Omega_2\cap\Omega_3(\epsilon,K)$. Pick $\tilde{\omega}\in\Omega_0$, and take $\tilde{E}$ a $g.e.$ for $H_{\tilde{\omega}}$.
+Without loss of generality assume $\Psi(0)\neq 0$. Then there exists $ N_4$, such that for every $ n>N_4$, 0 is $(\gamma(\tilde{E})-8\epsilon_0,n,\tilde{E},\tilde{\omega})$-singular.
 
 % Assume $2n+1$ is not eventually $(\gamma(\tilde{E})-8\epsilon_0,n,\tilde{E},\tilde{\omega})$-regular, then there exists $ \{n_k\}$ with $n_k\to\infty$, such that $2n_k+1$ is  $(\gamma(\tilde{E})-3\epsilon_0,n_k,\tilde{E},\tilde{\omega})$-singular.
 
-For $n>N_0=\max{N_1(\tilde{\omega}),N_2(\tilde{\omega},\tilde{E}),N_3(\tilde{\omega}),N_4(\tilde{\omega},\tilde{E})}$, assume $2n+1$ is $(\gamma(\tilde{E})-8\epsilon_0,n,\tilde{E},\tilde{\omega})$-singular.
+For $n>N_0=\max\{N_1(\tilde{\omega}),N_2(\tilde{\omega},\tilde{E}),N_3(\tilde{\omega}),N_4(\tilde{\omega},\tilde{E})\}$, assume $2n+1$ is $(\gamma(\tilde{E})-8\epsilon_0,n,\tilde{E},\tilde{\omega})$-singular.
 % WLOG use $\{n\}$ istead of $\{n_k\}$, we have that
-\begin{itemize}
-  \item Both $0$ and $2n+1$ is $(\gamma(\tilde{E})-8\epsilon_0,n,\tilde{E},\tilde{\omega})$-singular.
-  \item So by Lemma \ref{lemma1},  $\tilde{E}\in B_{[n+1,3n+1],\epsilon_0,\tilde{\omega}}^-\cup B_{[n+1,2n+1],\epsilon_0,\tilde{\omega}}^+\cup B_{[2n+1,3n+1],\epsilon_0,\tilde{\omega}}^+$.
-  \item By Corollary \ref{omega2} and \eqref{B+}, $\tilde{E}\notin B_{[n+1,2n+1],\epsilon_0,\tilde{\omega}}^+\cup B_{[2n+1,3n+1],\epsilon_0,\tilde{\omega}}^+$, so it can only lie in $B_{[n+1,3n+1],\epsilon_0,\tilde{\omega}}^-$
-  \item
+% \begin{itemize}
+ Then both $0$ and $2n+1$ is $(\gamma(\tilde{E})-8\epsilon_0,n,\tilde{E},\tilde{\omega})$-singular. So by Lemma \ref{lemma1},
+  $\tilde{E}\in B_{[n+1,3n+1],\epsilon_0,\tilde{\omega}}^-\cup B_{[n+1,2n+1],\epsilon_0,\tilde{\omega}}^+ \cup B_{[2n+1,3n+1],\epsilon_0,\tilde{\omega}}^+ $.
+  By Corollary \ref{omega2} and \eqref{B+}, $\tilde{E}\notin B_{[n+1,2n+1],\epsilon_0,\tilde{\omega}}^+\cup B_{[2n+1,3n+1],\epsilon_0,\tilde{\omega}}^+$, so it can only lie in $B_{[n+1,3n+1],\epsilon_0,\tilde{\omega}}^-$.
+
   % But  by \eqref{B-}.
   % \begin{equation}\label{bad}
   %   B_{[n+1,3n+1],\epsilon_0,\tilde{\omega}}^-= \left\{E:|P_{[n+1,3n+1],\epsilon,E,\tilde{\omega}}|\leq e^{(\gamma(E)-\epsilon_0)(2n+1)}\right\}
@@ -41,24 +41,24 @@ For $n>N_0=\max{N_1(\tilde{\omega}),N_2(\tilde{\omega},\tilde{E}),N_3(\tilde{\om
    \[
    \vert\tilde{E}-E_{i,[-n,n],\tilde{\omega}}\vert\leq e^{-(\eta_0-\delta_0)(2n+1)}
    \]
-   \item So $\vert E_{i,[-n,n],\tilde{\omega}}-E_{j,[n+1,3n+1],\tilde{\omega}}\vert\leq 2e^{-(\eta_0-\delta_0)(2n+1)}$. However, by Theorem \ref{omega3}, one has $E_{j,[n+1,3n+1],\tilde{\omega}}\notin B_{[-n,n],\epsilon,\tilde{\omega}}$, while $E_{i,[-n,n],\tilde{\omega}}\in B_{[-n,n],\epsilon,\tilde{\omega}}$
-   This will give us a contradiction below.
-\end{itemize}
-~\\
+   Thus $\vert E_{i,[-n,n],\tilde{\omega}}-E_{j,[n+1,3n+1],\tilde{\omega}}\vert\leq 2e^{-(\eta_0-\delta_0)(2n+1)}$. However, by Theorem \ref{omega3}, one has $E_{j,[n+1,3n+1],\tilde{\omega}}\notin B_{[-n,n],\epsilon,\tilde{\omega}}$, while $E_{i,[-n,n],\tilde{\omega}}\in B_{[-n,n],\epsilon,\tilde{\omega}}$
+   This will give us a contradiction below.\\
+% \end{itemize}
+% ~\\
 Since $\vert E_{i,[-n,n],\tilde{\omega}}-E_{j,[n+1,3n+1],\tilde{\omega}}\vert\leq 2e^{-(\eta_0-\delta_0)(2n+1)}$ and $E_{i,[-n,n],\tilde{\omega}}$ is the e.v. of $H_{[-n,n],\tilde{\omega}}$,
 \[
   \left\Vert G_{[-n,n],E_{j,[n+1,3n+1],\tilde{\omega}},\tilde{\omega}}\right\Vert\geq \frac{1}{2}e^{(\eta_0-\delta_0)(2n+1)}
 \]
-So there exists $ y_{1},y_{2}\in [-n,n]$ and such that
+Thus there exist $ y_{1},y_{2}\in [-n,n]$ and such that
 % Need fix
 \[
   \left\vert G_{[-n,n],E_{j,[n+1,3n+1],\tilde{\omega}},\tilde{\omega}}(y_{1},y_{2})\right\vert\geq \frac{1}{2n}e^{(\eta_0-\delta_0)(2n+1)}
 \]
-Let $E_j=E_{j,[n+1,3n+1],\tilde{\omega}}$, we have $E_j\notin B_{[-n,n],\epsilon,\tilde{\omega}}$, i.e.
+Let $E_j=E_{j,[n+1,3n+1],\tilde{\omega}}$. We have $E_j\notin B_{[-n,n],\epsilon,\tilde{\omega}}$, thus
 \[
 \vert P_{[-n,n],\epsilon,E_j,\tilde{\omega}}\vert\geq e^{(\gamma(E_j)-\epsilon)(2n+1)}
 \]
-so
+so by \eqref{A},
 \begin{equation}\label{last}
   \left\Vert P_{[-n,y_{1}],\epsilon,E_j，\tilde{\omega}}P_{[y_{2},n],\epsilon,E_j,\tilde{\omega}}\right\Vert\geq\frac{1}{2n}e^{(\eta_0-\delta_0)(2n+1)}e^{(\gamma(E_j)-\epsilon)(2n+1)}
 \end{equation}
@@ -102,16 +102,13 @@ For $(2)$,
 \]
 is in contradiction with \eqref{epsilon1} and \eqref{K}
 
-For $(3)$,with \eqref{epsilon1} and \eqref{K}
+For $(3)$, with \eqref{epsilon1} and \eqref{K}
 \[
-\begin{aligned}
-  \frac{1}{2n}e^{(\eta_0-\delta_0+\gamma(E_j)-\epsilon)(2n+1)}
-  &\leq M^{\frac{2n}{K}}\\
-  &\leq (L-\sigma)^{2n}\\
-  &\leq(e^{(\eta_0-\delta_0+\gamma(E_j)-\epsilon)}-\sigma)^{2n}
-\end{aligned}
+% \begin{aligned}
+  \frac{1}{2n}e^{(\eta_0-\delta_0+\gamma(E_j)-\epsilon)(2n+1)}\leq M^{\frac{2n}{K}}\leq (L-\sigma)^{2n}\leq(e^{(\eta_0-\delta_0+\gamma(E_j)-\epsilon)}-\sigma)^{2n}
+% \end{aligned}
 \]
 also a contradiction.
 
-So our assumption that $2n+1$ is not  $(\gamma(\tilde{E})-8\epsilon_0,n,\tilde{E},\tilde{\omega})$-regular is false. Theorem \ref{thm2} follows.
+Thus our assumption that $2n+1$ is not  $(\gamma(\tilde{E})-8\epsilon_0,n,\tilde{E},\tilde{\omega})$-regular is false. Theorem \ref{thm2} follows.
 \end{proof}
